Colaboratory を使用して作成しました

--- a/NDLOCRチュートリアル.ipynb
+++ b/NDLOCRチュートリアル.ipynb
@@ -7,6 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "private_outputs": true,
+      "history_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -209,7 +210,7 @@
       "source": [
         "url = \"https://www.dl.ndl.go.jp/api/iiif/3437686/R0000006/full/full/0/default.jpg\" #@param {type:\"string\"}\n",
         "output_file_path = \"/content/drive/MyDrive/ndl_ocr/test.json\" #@param {type:\"string\"}\n",
-        "process = \"\\u50BE\\u304D\\u88DC\\u6B63,\\u30EC\\u30A4\\u30A2\\u30A6\\u30C8\\u62BD\\u51FA,\\u6587\\u5B57\\u8A8D\\u8B58(OCR)\" #@param [\"\\u3059\\u3079\\u3066\", \"\\u50BE\\u304D\\u88DC\\u6B63,\\u30EC\\u30A4\\u30A2\\u30A6\\u30C8\\u62BD\\u51FA,\\u6587\\u5B57\\u8A8D\\u8B58(OCR)\", \"\\u30EC\\u30A4\\u30A2\\u30A6\\u30C8\\u62BD\\u51FA,\\u6587\\u5B57\\u8A8D\\u8B58(OCR)\", \"\\u6587\\u5B57\\u8A8D\\u8B58(OCR)\"]"
+        "process = \"\\u3059\\u3079\\u3066: \\u30CE\\u30C9\\u5143\\u5206\\u5272,\\u50BE\\u304D\\u88DC\\u6B63,\\u30EC\\u30A4\\u30A2\\u30A6\\u30C8\\u62BD\\u51FA,\\u6587\\u5B57\\u8A8D\\u8B58(OCR)\" #@param [\"\\u3059\\u3079\\u3066: \\u30CE\\u30C9\\u5143\\u5206\\u5272,\\u50BE\\u304D\\u88DC\\u6B63,\\u30EC\\u30A4\\u30A2\\u30A6\\u30C8\\u62BD\\u51FA,\\u6587\\u5B57\\u8A8D\\u8B58(OCR)\", \"\\u50BE\\u304D\\u88DC\\u6B63,\\u30EC\\u30A4\\u30A2\\u30A6\\u30C8\\u62BD\\u51FA,\\u6587\\u5B57\\u8A8D\\u8B58(OCR)\", \"\\u30EC\\u30A4\\u30A2\\u30A6\\u30C8\\u62BD\\u51FA,\\u6587\\u5B57\\u8A8D\\u8B58(OCR)\", \"\\u6587\\u5B57\\u8A8D\\u8B58(OCR)\"]"
       ],
       "metadata": {
         "id": "9TtM8p9negc8",
@@ -257,7 +258,6 @@
         "\n",
         "def getImageSize(path):\n",
         "  im = Image.open(path)\n",
-        "  # width, height = im.size\n",
         "  return im.size\n",
         "\n",
         "def getTmpOutputDir(path):\n",
@@ -274,7 +274,7 @@
         "  # 実行\n",
         "  !python main.py infer -s f $path $output_dir -x -p $p\n",
         "\n",
-        "def createManifestFromXml(tmpOutputDir):\n",
+        "def createManifestFromXml(tmpOutputDir, width):\n",
         "  # manifest生成\n",
         "  xml_files = glob.glob(tmpOutputDir + \"/**/*.xml\", recursive=True)\n",
         "  xml_files = sorted(xml_files)\n",
@@ -286,9 +286,6 @@
         "    soup = bs4.BeautifulSoup(open(file), 'xml')\n",
         "    element_names = [\"LINE\", \"BLOCK\"]\n",
         "    pages = soup.find_all(\"PAGE\")\n",
-        "\n",
-        "    if len(pages) == 2:\n",
-        "      left_page_width = int(pages[0][\"WIDTH\"])\n",
         "\n",
         "    annos = []\n",
         "\n",
@@ -353,32 +350,29 @@
         "        elements = page.find_all(element_name)\n",
         "\n",
         "        for e in elements:\n",
-        "          try:\n",
-        "            conf = e[\"CONF\"]\n",
-        "            text = e[\"STRING\"]\n",
-        "            h = e[\"HEIGHT\"]\n",
-        "            w = e[\"WIDTH\"]\n",
-        "            x = e[\"X\"]\n",
-        "            y = e[\"Y\"]\n",
+        "          conf = e[\"CONF\"]\n",
+        "          text = e[\"STRING\"] if e.has_attr(\"STRING\") else \"\" # ルビの場合など\n",
+        "          h = e[\"HEIGHT\"]\n",
+        "          w = e[\"WIDTH\"]\n",
+        "          x = e[\"X\"]\n",
+        "          y = e[\"Y\"]\n",
         "\n",
-        "            # 右ページの場合は要注意\n",
-        "            if i == 1:\n",
-        "              x = int(x) + left_page_width\n",
+        "          # 右ページの場合は要注意\n",
+        "          # とりあえず、右端からPAGE_WIDTHを引いたX座標からスタート\n",
+        "          if i == 1:\n",
+        "            x = int(x) + width - int(page_width)\n",
         "\n",
-        "            xywh = \"{},{},{},{}\".format(x, y, w, h)\n",
+        "          xywh = \"{},{},{},{}\".format(x, y, w, h)\n",
         "\n",
-        "            type_ = e[\"TYPE\"]\n",
-        "            anno = {\n",
-        "              \"id\": canvas_id + \"/annos/{}\".format(len(annos)),\n",
-        "              \"motivation\": \"commenting\",\n",
-        "              \"target\": canvas_id + \"#xywh={}\".format(xywh),\n",
-        "              \"type\": \"Annotation\",\n",
-        "              \"body\": { \"type\": \"TextualBody\", \"value\": \"【{}】{}\".format(type_, text) }\n",
-        "            }\n",
-        "            annos.append(anno)\n",
-        "          except:\n",
-        "            # ルビ\n",
-        "            pass\n",
+        "          type_ = e[\"TYPE\"]\n",
+        "          anno = {\n",
+        "            \"id\": canvas_id + \"/annos/{}\".format(len(annos)),\n",
+        "            \"motivation\": \"commenting\",\n",
+        "            \"target\": canvas_id + \"#xywh={}\".format(xywh),\n",
+        "            \"type\": \"Annotation\",\n",
+        "            \"body\": { \"type\": \"TextualBody\", \"value\": \"【{}】{}\".format(type_, text) }\n",
+        "          }\n",
+        "          annos.append(anno)\n",
         "\n",
         "  manifest = {\n",
         "    \"@context\": \"http://iiif.io/api/presentation/3/context.json\",\n",
@@ -400,7 +394,7 @@
         "# 推論の実行\n",
         "inference(path, tmpOutputDir)\n",
         "# マニフェストファイルの作成\n",
-        "manifest = createManifestFromXml(tmpOutputDir)\n",
+        "manifest = createManifestFromXml(tmpOutputDir, width)\n",
         "\n",
         "# 出力フォルダに保存\n",
         "output_path = output_file_path\n",
@@ -412,9 +406,9 @@
         "            indent=4, sort_keys=True, separators=(',', ': '))\n",
         "\n",
         "# 認識結果の確認\n",
-        "print(\"\\n\\n\\n\")\n",
-        "print(\"{} にマニフェストファイルを保存しました。\".format(output_path))\n",
-        "print(\"また以下のリンクから、認識結果を確認できます。\")\n",
+        "print(\"\\n\")\n",
+        "print(\"- {} にマニフェストファイルを保存しました。\".format(output_path))\n",
+        "print(\"- また以下のリンクから、認識結果を確認できます。\")\n",
         "output.serve_kernel_port_as_window(PORT, path=PATH)"
       ],
       "metadata": {
