Colaboratory を使用して作成しました

--- a/ndl_ocr_folder.ipynb
+++ b/ndl_ocr_folder.ipynb
@@ -8,7 +8,7 @@
       "background_execution": "on",
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNUXMDDTmLbYI+dMQPaZDUM",
+      "authorship_tag": "ABX9TyMqHTwsfSj62TbziMQknzn0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,7 +111,8 @@
         "os.environ[\"PYTHONPATH\"]=os.environ[\"PYTHONPATH\"]+\":\"+f\"{PROJECT_DIR}/src/text_recognition/deep-text-recognition-benchmark\""
       ],
       "metadata": {
-        "id": "YFJjVpZARBib"
+        "id": "YFJjVpZARBib",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -137,12 +138,13 @@
       "cell_type": "code",
       "source": [
         "#@title 設定\n",
-        "input_dir  = \"/content/drive/Shareddrives/データ駆動型プロジェクト/ocr/input/\" #@param {type:\"string\"}\n",
-        "output_dir  = \"/content/drive/Shareddrives/データ駆動型プロジェクト/ocr/output2/\" #@param {type:\"string\"}\n",
+        "input_dir  = \"/content/drive/MyDrive/ndl_ocr/input/\" #@param {type:\"string\"}\n",
+        "output_dir  = \"/content/drive/MyDrive/ndl_ocr/output/\" #@param {type:\"string\"}\n",
         "extensions = \"jpeg,jpg\" #@param {type:\"raw\"}"
       ],
       "metadata": {
-        "id": "tiiixoMDP8_t"
+        "id": "tiiixoMDP8_t",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
