--- a/ndl_ocr_folder.ipynb
+++ b/ndl_ocr_folder.ipynb
@@ -111,8 +111,8 @@
         "os.environ[\"PYTHONPATH\"]=os.environ[\"PYTHONPATH\"]+\":\"+f\"{PROJECT_DIR}/src/text_recognition/deep-text-recognition-benchmark\""
       ],
       "metadata": {
-        "id": "YFJjVpZARBib",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "YFJjVpZARBib"
       },
       "execution_count": null,
       "outputs": []
