Colaboratory を使用して作成しました

--- a/ndl_ocr_folder.ipynb
+++ b/ndl_ocr_folder.ipynb
@@ -8,7 +8,7 @@
       "background_execution": "on",
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMqHTwsfSj62TbziMQknzn0",
+      "authorship_tag": "ABX9TyN6sqg1f7naLw/y0LLhwHah",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,11 +34,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# NDLOCRチュートリアル2\n",
+        "# NDLOCRの実行例：Google Driveを用いた画像の入力と結果の保存\n",
         "\n",
         "Google Drive上のフォルダを指定して、当該フォルダに含まれる複数画像に対してOCR処理を実行し、指定したフォルダに認識結果を出力します。\n",
         "\n",
-        "参考：青池さんのノートブック"
+        "参考：https://github.com/blue0620/NDLOCR-GoogleColabVersion/blob/main/NDLOCR_googlecolabversion.ipynb"
       ],
       "metadata": {
         "id": "eQa1CxUBl9Ap"
@@ -73,7 +73,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title 初期セットアップ\n",
+        "# @title\n",
         "\n",
         "%cd \"/content/\"\n",
         "\n",
@@ -137,7 +137,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 設定\n",
+        "#@title\n",
         "input_dir  = \"/content/drive/MyDrive/ndl_ocr/input/\" #@param {type:\"string\"}\n",
         "output_dir  = \"/content/drive/MyDrive/ndl_ocr/output/\" #@param {type:\"string\"}\n",
         "extensions = \"jpeg,jpg\" #@param {type:\"raw\"}"
@@ -161,7 +161,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 実行\n",
+        "#@title\n",
         "\n",
         "def createParentDir(path):\n",
         "  basename = os.path.basename(path)\n",
